--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="learning_vocabulary">Learning Vocabulary</string>
     <string name="vocabulary_quiz">Vocabulary Quiz</string>
     <string name="grammar_quiz">Grammar Quiz</string>
+    <string name="lesson1">Lesson 1</string>
+    <string name="second_page_items">Lesson2</string>
+    <string name="image">image</string>
+    <string name="play_audio">play_audio</string>
 </resources>
