--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="second_page_items">Lesson2</string>
     <string name="image">image</string>
     <string name="play_audio">play_audio</string>
+    <string name="submit">SUBMIT</string>
 </resources>
