--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="hey_congratulations">Hey, Congratulations!</string>
     <string name="finish">FINISH</string>
     <string name="next">NEXT</string>
+    <string name="play_audio1">Play Audio</string>
 </resources>
