--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="play_audio1">Play Audio</string>
 
     <string name="profile">Profile</string>
+    <string name="vocabulary_report">Vocabulary Report</string>
 
 </resources>
