Video Fragment added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,6 @@
     <string name="vocabulary_report">Vocabulary Report</string>
     <string name="profile_image">profile_image</string>
     <string name="SignOut">Sign Out</string>
+    <string name="learning_alphabet">Learning Alphabet</string>
 
 </resources>
