--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,6 @@
     <string name="profile_image">profile_image</string>
     <string name="SignOut">Sign Out</string>
     <string name="learning_alphabet">Learning Alphabet</string>
+    <string name="quiz_report">Quiz Report</string>
 
 </resources>
