--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,7 @@
     <string name="learning_alphabet">Learning Alphabet</string>
     <string name="quiz_report">Quiz Report</string>
     <string name="videos">Videos</string>
+    <string name="littlelingo">LittleLingo</string>
+    <string name="littlelingo1">LittleLingo</string>
 
 </resources>
